[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 10
exclude = ["setup.py", "docs", "build", "data_pipelines"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.poetry]
name = "data_pipelines"
version = "1.0"   
description = ""
authors = ["Henry"]

[tool.poetry.dependencies]
apache-airflow = "^2.1.4"
python = "^3.7"
mysql-connector-python = "8.0.*"
psycopg2-binary = "2.9.*"
pymysql = "*"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
python-dotenv = "^0.19.1"
